force-app/main/default/objects/Kargo__c/Kargo__c.object-meta.xml
<CustomObject>
    <label>Kargo</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Kargo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kargolar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>