force-app/main/default/objects/Kargo__c/fields/agirlik__c.field-meta.xml
<CustomField>
    <fullName>agirlik__c</fullName>
    <label>Ağırlık</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>