force-app/main/default/objects/Kargo__c/fields/Fiyati__c.field-meta.xml
<CustomField>
    <fullName>Fiyati__c</fullName>
    <label>Fiyati</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>